Finish 9_model_tuning_quiz.ipynb

--- a/Spark_ML/sparkml/9_model_tuning_quiz.ipynb
+++ b/Spark_ML/sparkml/9_model_tuning_quiz.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,37 @@
     "# TODOS: \n",
     "# 1) import any other libraries you might need\n",
     "# 2) run the cells below to read dataset\n",
-    "# 3) follow the steps below to find the answer to the quiz question"
+    "# 3) follow the steps below to find the answer to the quiz question\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.feature import CountVectorizer, IDF, Normalizer, PCA, RegexTokenizer, StandardScaler, StopWordsRemover, StringIndexer, VectorAssembler\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/usr/local/lib/python3.9/site-packages/pyspark/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/01/14 17:52:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/01/14 17:52:43 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/01/14 17:52:43 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .master(\"local\") \\\n",
@@ -36,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[Body: string, Id: bigint, Tags: string, Title: string, oneTag: string]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = spark.read.json(stack_overflow_data)\n",
     "df.persist()"
@@ -66,11 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write your code for this step"
+    "# TODO: write your code for this step\n",
+    "train, test = df.randomSplit([0.9, 0.1], seed=42)"
    ]
   },
   {
@@ -82,11 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write your code for this step"
+    "# TODO: write your code for this step\n",
+    "# TF-IDF\n",
+    "regexTokenizer = RegexTokenizer(inputCol='Body', outputCol='words', pattern=\"\\\\W\")\n",
+    "cv = CountVectorizer(inputCol=\"words\", outputCol=\"TF\", vocabSize=1000)\n",
+    "idf = IDF(inputCol=\"TF\", outputCol=\"features\")\n",
+    "\n",
+    "indexer = StringIndexer(inputCol=\"oneTag\", outputCol=\"label\")\n",
+    "\n",
+    "# Modeling\n",
+    "lr =  LogisticRegression(maxIter=10, regParam=0.0, elasticNetParam=0)\n",
+    "\n",
+    "# Pipeline\n",
+    "pipeline = Pipeline(stages=[regexTokenizer, cv, idf, indexer, lr])"
    ]
   },
   {
@@ -103,11 +157,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write your code for this step"
+    "# TODO: write your code for this step\n",
+    "# Parameters Tuning\n",
+    "paramGrid = ParamGridBuilder() \\\n",
+    "    .addGrid(cv.vocabSize, [1000, 5000]) \\\n",
+    "    .addGrid(lr.regParam, [0.0, 0.1]) \\\n",
+    "    .build()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cross-Validation\n",
+    "crossval = CrossValidator(estimator=pipeline,\n",
+    "                          estimatorParamMaps=paramGrid,\n",
+    "                          evaluator=MulticlassClassificationEvaluator(),\n",
+    "                          numFolds=3)"
    ]
   },
   {
@@ -119,11 +191,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/01/14 17:53:16 WARN InstanceBuilder$NativeBLAS: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n",
+      "22/01/14 17:53:16 WARN InstanceBuilder$NativeBLAS: Failed to load implementation from:dev.ludovic.netlib.blas.ForeignLinkerBLAS\n",
+      "22/01/14 17:53:19 WARN BLAS: Failed to load implementation from: com.github.fommil.netlib.NativeSystemBLAS\n",
+      "22/01/14 17:53:19 WARN BLAS: Failed to load implementation from: com.github.fommil.netlib.NativeRefBLAS\n",
+      "22/01/14 17:53:50 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/01/14 17:54:52 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/01/14 17:56:31 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "22/01/14 17:58:14 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "22/01/14 17:59:13 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/01/14 18:00:09 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/01/14 18:01:48 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "22/01/14 18:03:31 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "22/01/14 18:04:33 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/01/14 18:05:36 WARN DAGScheduler: Broadcasting large task binary with size 2.4 MiB\n",
+      "22/01/14 18:07:24 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "22/01/14 18:09:13 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: write your code for this step\n",
+    "# Model training\n",
+    "cv_model = crossval.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.3111202060304143,\n",
+       " 0.23108195330468076,\n",
+       " 0.3635594536132107,\n",
+       " 0.28608901695647787]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Training result\n",
+    "cv_model.avgMetrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write your code for this step"
+    "# Model Evaluation\n",
+    "result = cv_model.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Compute Accuracy of Best Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/01/14 18:11:53 WARN DAGScheduler: Broadcasting large task binary with size 11.7 MiB\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3899\n",
+      "10062\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.filter(result.label == result.prediction).count())\n",
+    "print(result.count())"
    ]
   },
   {
@@ -136,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -150,9 +316,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
